# chonkie

./: README.md  pyproject.toml
.github/workflows/: lazy-import.yml  trufflehog.yml
docs/common/: welcome.mdx
src/chonkie/: __init__.py  tokenizer.py
src/chonkie/chunker/: code.py
src/chonkie/experimental/: __init__.py
tests/: test_tokenizer.py
tests/chunkers/: test_code_chunker.py
