[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "chonkie"
version = "1.6.5"
description = "🦛 CHONK your texts with Chonkie ✨ - The no-nonsense chunking library"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
    "chunking",
    "rag",
    "retrieval-augmented-generation",
    "nlp",
    "natural-language-processing",
    "text-processing",
    "text-analysis",
    "text-chunking",
    "artificial-intelligence",
    "machine-learning",
]
authors = [
    { name = "Bhavnick Minhas", email = "bhavnick@chonkie.ai" },
    { name = "Shreyash Nigam", email = "shreyash@chonkie.ai" },
]
maintainers = [
    { name = "Bhavnick Minhas", email = "bhavnick@chonkie.ai" },
    { name = "Shreyash Nigam", email = "shreyash@chonkie.ai" },
    { name = "Hafedh Hichri", email = "lain@chonkie.ai" },
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "tqdm>=4.64.0",
    "numpy>=2.0.0",
    "chonkie-core>=0.8.0",
    "tenacity>=8.0.0",
    "httpx>=0.28.1",
    "tokie>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/chonkie-inc/chonkie"
Documentation = "https://docs.chonkie.ai"
"Bug Tracker" = "https://github.com/chonkie-inc/chonkie/issues"

[project.scripts]
chonkie = "chonkie.cli:main"

[project.optional-dependencies]
# Optional dependencies for the utils
hub = ["huggingface-hub>=0.24.0", "jsonschema>=4.23.0"]
viz = ["rich>=13.0.0"]
cli = ["typer>=0.9.0"]

# Optional dependencies for the API server
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "huggingface-hub>=1.5.0",
    "jsonschema>=4.23.0",
]

# Optional dependencies for table chef
table = ["pandas", "tabulate", "openpyxl", "lxml"]

# Legacy tokenizer extras (tokie is now the default, these are for backward compat)
tokenizers = ["tokenizers>=0.16.0"]
tiktoken = ["tiktoken>=0.5.0"]

# Optional dependencies for the chunkers
code = [
    "tree-sitter>=0.20.0",
    "tree-sitter-language-pack>=0.7.0",
    "magika>=0.6.0, <1.1.0",
]
neural = ["transformers>=4.0.0", "torch>=2.0.0, <3.0"]

# Optional dependencies for the embeddings
model2vec = ["tokenizers>=0.16.0", "model2vec>=0.7.0", "numpy>=2.0.0, <3.0"]

st = ["tokenizers>=0.16.0", "sentence-transformers>=3.0.0", "accelerate>=1.6.0"]
openai = ["tiktoken>=0.5.0", "openai>=1.0.0", "pydantic>=2.0.0"]

semantic = ["tokenizers>=0.16.0", "model2vec>=0.3.0"]

teraflopai = ["teraflopai>=0.1.0"]

gemini = ["pydantic>=2.0.0", "google-genai>=1.0.0"]
azure-openai = [
    "azure-identity>=1.23.0",
    "tiktoken>=0.5.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]
groq = ["pydantic>=2.0.0", "groq>=0.4.0"]
cerebras = ["pydantic>=2.0.0", "cerebras-cloud-sdk>=1.0.0"]
voyageai = ["tokenizers>=0.16.0", "voyageai>=0.3.2"]
cohere = ["tokenizers>=0.16.0", "cohere>=5.13.0"]
jina = ["tokenizers>=0.16.0"]
catsu = ["catsu>=0.0.1"]
litellm = ["litellm>=1.0.0", "tiktoken>=0.5.0", "tokenizers>=0.16.0"]

# Optional dependencies for the friends
chroma = ["chromadb>=1.0.0"]
qdrant = ["qdrant-client>=1.0.0"]
tpuf = ["turbopuffer~=1.0"]
pgvector = ["vecs>=0.4.0"]
weaviate = ["weaviate-client>=4.16.7"]
datasets = ["datasets>=4.0.0"]
pinecone = ["pinecone"]
mongodb = ["pymongo"]
elastic = ["elasticsearch>=8.0.0"]
milvus = ["pymilvus>=2.1.0"]
lancedb = ["lancedb>=0.4.0"]

# Optional dependencies for the genie
genie = ["pydantic>=2.0.0", "google-genai>=1.0.0"]

# All dependencies
all = [
    "chonkie[hub]",
    "chonkie[viz]",
    "chonkie[cli]",
    "chonkie[api]",
    "chonkie[table]",
    "chonkie[tokenizers]",
    "chonkie[tiktoken]",
    "chonkie[code]",
    "chonkie[neural]",
    "chonkie[model2vec]",
    "chonkie[st]",
    "chonkie[openai]",
    "chonkie[semantic]",
    "chonkie[gemini]",
    "chonkie[azure-openai]",
    "chonkie[groq]",
    "chonkie[cerebras]",
    "chonkie[voyageai]",
    "chonkie[cohere]",
    "chonkie[jina]",
    "chonkie[catsu]",
    "chonkie[litellm]",
    "chonkie[chroma]",
    "chonkie[qdrant]",
    "chonkie[tpuf]",
    "chonkie[pgvector]",
    "chonkie[weaviate]",
    "chonkie[datasets]",
    "chonkie[pinecone]",
    "chonkie[mongodb]",
    "chonkie[elastic]",
    "chonkie[milvus]",
    "chonkie[lancedb]",
    "chonkie[genie]",
    "chonkie[teraflopai]",
]
dev = [
    "chonkie[all]",
    "datasets>=1.14.0",
    "transformers>=4.0.0",
    "pytest>=6.2.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=2.5.0",
    "pytest-asyncio>=0.26.0",
    "coverage",
    "ruff>=0.13.3",
    "ty",
    "pandas",
    "tabulate",
    "openpyxl",
    "uv>=0.9.18",
    "requests-cache>=1.2.1",
]

[dependency-groups]
dev = ["ruff>=0.13.3"]

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "chonkie",
    "chonkie.chunker",
    "chonkie.types",
    "chonkie.embeddings",
    "chonkie.utils",
    "chonkie.refinery",
    "chonkie.genie",
    "chonkie.handshakes",
    "chonkie.porters",
    "chonkie.cloud",
    "chonkie.cloud.chunker",
    "chonkie.cloud.refineries",
    "chonkie.experimental",
    "chonkie.fetcher",
    "chonkie.chef",
    "chonkie.pipeline",
    "chonkie.cli",
    "chonkie.api",
    "chonkie.api.routes",
    "chonkie.api.models",
]

[tool.setuptools.package-data]
"chonkie.chunker.c_extensions" = ["*.pyx", "*.pxd", "*.c", "*.so"]

[tool.ruff]
line-length = 99
exclude = ["*.ipynb"]
lint.select = ["B904", "F", "I", "D"]
lint.ignore = ["D211", "D213", "D203"]
lint.per-file-ignores = { "tests/**" = ["D100", "D102", "D103", "D104"] }

[tool.ruff.format]
preview = true
indent-style = "space"

[tool.coverage.run]
omit = [
    "*/chonkie/api/migrations/*",
]

[tool.coverage.report]
omit = [
    "*/chonkie/api/migrations/*",
]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
